--- a/static/host/qms.html
+++ b/static/host/qms.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://i0.wp.com">
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
     <link href="https://cdn.jsdelivr.net/npm/quasar@2.6.1/dist/quasar.prod.css" rel="stylesheet" type="text/css">
-    <script defer src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/quasar@2.6.1/dist/quasar.umd.prod.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/vue-router@4.0.14/dist/vue-router.global.prod.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/quasar@2.6.1/dist/quasar.umd.prod.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vue-router@4.0.14/dist/vue-router.global.prod.js" nonce="oYrfS15m4xZCHSTxc4XeSg"></script>
 </head>
 
 <body>
@@ -61,7 +61,7 @@
         </q-layout>
     </template>
 
-    <script>
+    <script nonce="oYrfS15m4xZCHSTxc4XeSg">
         document.addEventListener("DOMContentLoaded", function (event) {
             const app = Vue.createApp({
                 setup() {
